<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Article</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="abs">Abstract</string>
    <string name="url">Url</string>

</resources>
